--- a/danefirmy.html
+++ b/danefirmy.html
@@ -7,23 +7,19 @@
 <table>
 <tbody>
 <tr>
-  <td>Nazwa</td>
+  <td>Nazwa (NAME)</td>
   <td>IPEPE.PL PATRYK PTASIŃSKI</td>
 </tr>
 <tr>
-  <td>NIP</td>
+  <td>NIP (VAT-ID)</td>
   <td>5242715998</td>
 </tr>
 <tr>
-  <td>ADRES</td>
+  <td>ADRES (ADDRESS)</td>
   <td>ul. Prosta 69 lok. 1A.01, Warszawa, 00-838</td>
 </tr>
 <tr>
-  <td>REGON</td>
-  <td>380253420</td>
-</tr>
-<tr>
-  <td>Numer konta w banku</td>
+  <td>Numer konta w banku (BANK ACCOUNT NUMBER)</td>
   <td>PL 61 1050 1054 1000 0097 0091 2000</td>
 </tr>
 </tbody>
