--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ layout: default
 language: en
 ---
 
-<div class="container-fluid" style="padding-top: 15vh; padding-right: 7vw; padding-left: 7vw;">
+<div class="container-fluid" style="padding-top: 22vh; padding-right: 7vw; padding-left: 7vw;">
     <div class="row">
         {% for media in site.medias %}
             <div class="col-md-3 col-xs-3 col-lg-3 col-sm-3">
-                <a href="{{ media.url }} ">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h5>{{ media.title }}</h5>
+                <a href="{{ media.url }}" style="text-decoration: none;">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h5>{{ media.title }}</h5>
+                        </div>
+                        <div class="panel-body">
+                                <img src="{{ media.img }}" alt="" class="img-responsive center-block" style="max-width: 21vw" />
+                        </div>
                     </div>
-                    <div class="panel-body">
-                            <img src="{{ media.img }}" alt="" class="img-responsive center-block" style="max-width: 300px" />
-                    </div>
-                </div>
                 </a>
             </div>
         {% endfor %}
