--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@ layout: default
 language: en
 ---
 
-<div class="container-fluid" style="padding-top: 22vh; padding-right: 7vw; padding-left: 7vw;">
+<div class="container-fluid" style="padding-top: 8vh; padding-bottom: 5vh;">
     <div class="row">
         {% for media in site.medias %}
-            <div class="col-md-3 col-xs-3 col-lg-3 col-sm-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a href="{{ media.url }}" style="text-decoration: none;">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h5>{{ media.title }}</h5>
-                        </div>
-                        <div class="panel-body">
-                                <img src="{{ media.img }}" alt="" class="img-responsive center-block" style="max-width: 21vw" />
-                        </div>
-                    </div>
+                    <h5>{{ media.title }}</h5>
+                    <img src="{{ media.img }}" alt="" class="img-responsive center-block" />
                 </a>
             </div>
         {% endfor %}
