--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ language: en
 <div class="container-fluid" style="padding-top: 8vh; padding-bottom: 5vh;">
     <div class="row">
         {% for media in site.medias %}
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
                 <a href="{{ media.url }}" style="text-decoration: none;">
-                    <h5>{{ media.title }}</h5>
-                    <img src="{{ media.img }}" alt="" class="img-responsive center-block" />
+                    <div class="text-center"><h5>{{ media.title }}</h5></div>
+                    <img src="{{ media.img }}" alt="{{ media.title }}" class="img-responsive center-block" style="border-radius: 50px" />
                 </a>
             </div>
         {% endfor %}
